--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT ",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "form-data": "^4.0.0",
     "mailgun.js": "^10.2.3"
